<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14.7dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/effort_target"/>

    <RelativeLayout
        android:id="@+id/btn_type_1"
        style="@style/SelectEffortModeBtn"
        android:layout_marginTop="24dp">
        <TextView
            style="@style/SelectEffortModeTv"
            android:text="@string/effort_target_type_1"/>
        <View
            android:id="@+id/v_select_type_1"
            style="@style/SelectEffortModeSv"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_type_2"
        style="@style/SelectEffortModeBtn"
        android:layout_marginTop="12dp">
        <TextView
            style="@style/SelectEffortModeTv"
            android:text="@string/effort_target_type_2"/>
        <View
            android:id="@+id/v_select_type_2"
            style="@style/SelectEffortModeSv"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14.7dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="42dp"
        android:text="@string/effort_duration"/>

    <RelativeLayout
        android:id="@+id/btn_time_30"
        style="@style/SelectEffortModeBtn"
        android:layout_marginTop="24dp">
        <TextView
            style="@style/SelectEffortModeTv"
            android:text="@string/effort_time_30"/>
        <View
            android:id="@+id/v_select_time_30"
            style="@style/SelectEffortModeSv"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_time_45"
        style="@style/SelectEffortModeBtn"
        android:layout_marginTop="12dp">
        <TextView
            style="@style/SelectEffortModeTv"
            android:text="@string/effort_time_45"/>
        <View
            android:id="@+id/v_select_time_45"
            style="@style/SelectEffortModeSv"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_time_60"
        style="@style/SelectEffortModeBtn"
        android:layout_marginTop="12dp">
        <TextView
            style="@style/SelectEffortModeTv"
            android:text="@string/effort_time_60"/>
        <View
            android:id="@+id/v_select_time_60"
            style="@style/SelectEffortModeSv"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/Btn_Commit"
        android:layout_marginBottom="18dp"
        android:text="@string/next"/>
</LinearLayout>