<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base_gray"
    android:orientation="vertical">

    <!-- title -->
    <RelativeLayout style="@style/Title_Layout">

        <TextView
            android:id="@+id/btn_back"
            style="@style/Title_BackButton"
            android:text="@string/tab_user" />

        <TextView
            style="@style/Title_TitleTv"
            android:text="@string/title_sleep_target" />
    </RelativeLayout>

    <TextView
        style="@style/GuideLineTitleTv"
        android:text="@string/tip_sleep_target" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/bg_base"
        android:orientation="vertical">

        <!-- 睡眠时长 -->
        <RelativeLayout
            android:id="@+id/rl_sign_sleep_target_set"
            style="@style/GuideLineSetItem">

            <TextView
                style="@style/GuideLineSetItemTv"
                android:text="@string/sign_sleep_target_set" />

            <TextView
                android:id="@+id/tv_sleep_target"
                style="@style/GuideLineRightText"
                android:text="0小时00分" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>