<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base"
    android:orientation="vertical">


    <!-- title -->
    <RelativeLayout
        style="@style/Title_Layout">

        <TextView
            android:id="@+id/btn_back"
            style="@style/Title_BackButton"
            android:text="@string/cancel" />

        <TextView
            style="@style/Title_TitleTv"
            android:text="@string/title_record_sleep" />

        <LinearLayout style="@style/TitleRightBtnLy">

            <TextView
                android:id="@+id/tv_sleep_record_save"
                style="@style/Title_RightButton"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="17dp" />

        </LinearLayout>
    </RelativeLayout>

    <!-- 开始时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/GuideLineAddRecordTipTv"
            android:text="@string/tip_start_time" />

        <View
            style="@style/DividerH"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_start_time_value"
            style="@style/GuideLineAddRecordValueLl">

            <TextView
                android:id="@+id/tv_start_time_value"
                style="@style/GuideLineAddRecordValueTv"
                android:text="2016年11月10日 周五 23:00" />

        </LinearLayout>
    </LinearLayout>

    <!-- 结束时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/GuideLineAddRecordTipTv"
            android:text="@string/tip_end_time" />

        <View
            style="@style/DividerH"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/ll_end_time_value"
            style="@style/GuideLineAddRecordValueLl">

            <TextView
                android:id="@+id/tv_end_time_value"
                style="@style/GuideLineAddRecordValueTv"
                android:text="2016年11月10日 周五 23:00" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>